# assimp2json

./: .gitmodules  CMakeLists.txt
assimp2json/: json_exporter.cpp
js/: binding.gyp  index.js
node-binding/: AssimpExporter.cpp  AssimpExporter.hpp  AssimpToJson.cpp  AssimpToJson.hpp  a2j_node_js.cpp  library.cpp  plugin.cpp  plugin.hpp
